--- a/index.html
+++ b/index.html
@@ -56,12 +56,15 @@
 
     <section>
         <div class="portfolio-item">
-            <a href="#">About Me</a>
-            <p>3rd year College student</p>
+            <a href="AboutMe/Aboutme.html">About Me</a>
+            <p>Information Technology College student</p>
             <p>Technologies used: HTML, CSS, JavaScript.</p>
-            <a href="#">View Project</a>
+            <p>Knowledgeable in C,C# and Lua</p>
         </div>
-        <!-- Add more portfolio items as needed -->
+       
+        <div class="portfolio-item">
+            
+        </div>
     </section>
 </body>
 </html>
