--- a/ContactMe.html
+++ b/ContactMe.html
@@ -61,7 +61,8 @@
     </header>
 
     <div class="cv-container">
-        <p>You can reach me via email at: your.email@example.com</p>
+        <p>You can reach me via email at: carlomendoza027@outlook.com</p>
+        <p>or you can also contact me here: caloy0270@gmail.com</p>
         <p>Feel free to send any inquiries or questions you may have!</p>
     </div>
 
