--- a/AboutMe/Aboutme.html
+++ b/AboutMe/Aboutme.html
@@ -74,7 +74,7 @@
                 Welcome to my personal portfolio!
             </p>
             <p>
-                I'm an IT Student with experience in C, C#, Lua and 3d Modeling using 
+                I'm an IT Student with experience in C, C#, HTML and 3d Modeling using 
                 Blendr software
             </p>
            
