--- a/Skills/Skills.html
+++ b/Skills/Skills.html
@@ -118,8 +118,8 @@
             </div>
         </div>
 
-        <div id="lua-skills" style="display: none;">
-            <h2>Lua</h2>
+        <div id="HTML-skills" style="display: none;">
+            <h2>HTML</h2>
             <div class="skill-bar">
                 <div class="skill-fill" style="width: 25%;"></div>
             </div>
