--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <a href="AboutMe/Aboutme.html">About Me</a>
             <p>Information Technology College student</p>
             <p>Technologies used: HTML, CSS, JavaScript.</p>
-            <p>Knowledgeable in C,C# and Lua</p>
+            <p>Knowledgeable in C,C# and HTML</p>
         </div>
        
         <div class="portfolio-item">
