--- a/ContactMe.html
+++ b/ContactMe.html
@@ -62,6 +62,7 @@
         <p>You can reach me via email at: carlomendoza027@outlook.com</p>
         <p>or you can also contact me here: caloy0270@gmail.com</p>
         <p>Feel free to send any inquiries or questions you may have!</p>
+        <P>Thank You!</P>
     </div>
 
 </body>
